--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "react-secure-storage": "^1.3.2",
     "react-slick": "^0.30.2",
+    "react-timestamp": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.0"
   },
